--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ astroid @ file:///C:/ci/astroid_1592487315634/work
 astropy==4.0.1.post1
 atomicwrites==1.4.0
 attrs==19.3.0
+setuptools==0.7.3
 autopep8 @ file:///tmp/build/80754af9/autopep8_1592412889138/work
 Babel==2.8.0
 backcall==0.2.0
